Tune project, additional examples added
