# laravel/app/Http/Controllers/API/ExamplesController.php
@@ -4,7 +4,10 @@ namespace App\Http\Controllers\API;
 
 use App\Models\Example;
 use App\Http\Requests\ExampleStoreRequest;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+use Symfony\Component\HttpFoundation\Response as HttpResponse;
 
 class ExamplesController extends Controller
 {
@@ -12,8 +15,11 @@ class ExamplesController extends Controller
      * @OA\Get(
      *     path="/examples",
      *     operationId="examplesAll",
-     *     tags={"Pages"},
+     *     tags={"Examples"},
      *     summary="Display a listing of the resource",
+     *     security={
+     *       {"api_key": {}},
+     *     },
      *     @OA\Parameter(
      *         name="page",
      *         in="query",
@@ -25,21 +31,24 @@ class ExamplesController extends Controller
      *     ),
      *     @OA\Response(
      *         response="200",
-     *         description="Everything is fine"
+     *         description="Everything is fine",
+     *         @OA\MediaType(
+     *             mediaType="application/json",
+     *             @OA\Schema(
+     *                 type="array",
+     *                 @OA\Items(ref="#/components/schemas/ExampleShowRequest"),
+     *             )
+     *         )
      *     ),
-     *     @OA\Response(
-     *         response="404",
-     *         description="Example not found"
-     *     )
      * )
      *
      * Display a listing of the resource.
      *
-     * @return \Illuminate\Http\Response
+     * @return \Illuminate\Http\JsonResponse
      */
-    public function index()
+    public function index(): JsonResponse
     {
-        $model = Example::query()->paginate(2);
+        $model = Example::query()->get();
         return response()->json($model);
     }
 
@@ -47,65 +56,158 @@ class ExamplesController extends Controller
      * @OA\Post(
      *     path="/examples",
      *     operationId="exampleCreate",
-     *     tags={"Pages"},
+     *     tags={"Examples"},
      *     summary="Create yet another example record",
      *     security={
-     *       {"app_id": {}},
+     *       {"api_key": {}},
      *     },
      *     @OA\Response(
      *         response="200",
-     *         description="Everything is fine"
+     *         description="Everything is fine",
+     *         @OA\JsonContent(ref="#/components/schemas/ExampleShowRequest")
      *     ),
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(ref="#/components/schemas/ExampleStoreRequest")
-     *     )
+     *     ),
      * )
      * Store a newly created resource in storage.
      *
-     * @param \Illuminate\Http\Request $request
-     * @return \Illuminate\Http\Response
+     * @param \App\Http\Requests\ExampleStoreRequest $request
+     *
+     * @return \Illuminate\Http\JsonResponse
      */
-    public function store(ExampleStoreRequest $request)
+    public function store(ExampleStoreRequest $request): JsonResponse
     {
-        $item = new Example();
-        $item->fill($request->all());
-        $item->save();
+        $model = new Example();
+        $model->fill($request->all());
+        $model->save();
 
-        return response('', 201);
+        return response()->json($model);
     }
 
     /**
-     * Display the specified resource.
+     * @OA\Get(
+     *     path="/examples/{id}",
+     *     operationId="examplesGet",
+     *     tags={"Examples"},
+     *     summary="Get example by ID",
+     *     security={
+     *       {"api_key": {}},
+     *     },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of example",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *         @OA\JsonContent(ref="#/components/schemas/ExampleShowRequest")
+     *     ),
+     * )
+     *
+     * Display a listing of the resource.
      *
      * @param int $id
-     * @return \Illuminate\Http\Response
+     *
+     * @return \Illuminate\Http\JsonResponse
      */
-    public function show($id)
+    public function show(int $id): JsonResponse
     {
-        //
+        $model = Example::query()->findOrFail($id);
+        return response()->json($model);
     }
 
     /**
+     * @OA\Put(
+     *     path="/examples/{id}",
+     *     operationId="examplesUpdate",
+     *     tags={"Examples"},
+     *     summary="Update example by ID",
+     *     security={
+     *       {"api_key": {}},
+     *     },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of example",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *         @OA\JsonContent(ref="#/components/schemas/ExampleShowRequest")
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/ExampleStoreRequest")
+     *     ),
+     * )
+     *
      * Update the specified resource in storage.
      *
      * @param \Illuminate\Http\Request $request
      * @param int                      $id
-     * @return \Illuminate\Http\Response
+     *
+     * @return \Illuminate\Http\JsonResponse
      */
-    public function update(Request $request, $id)
+    public function update(Request $request, int $id): JsonResponse
     {
-        //
+        $params = $request->all();
+        $model  = Example::query()->findOrFail($id);
+        $model->fill($params);
+        $model->save();
+
+        return response()->json($model);
     }
 
     /**
+     * @OA\Delete(
+     *     path="/examples/{id}",
+     *     operationId="examplesDelete",
+     *     tags={"Examples"},
+     *     summary="Delete example by ID",
+     *     security={
+     *       {"api_key": {}},
+     *     },
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         description="The ID of example",
+     *         required=true,
+     *         example="1",
+     *         @OA\Schema(
+     *             type="integer",
+     *         ),
+     *     ),
+     *     @OA\Response(
+     *         response="202",
+     *         description="Deleted",
+     *     ),
+     * )
+     *
      * Remove the specified resource from storage.
      *
      * @param int $id
+     *
      * @return \Illuminate\Http\Response
+     * @throws \Exception
      */
-    public function destroy($id)
+    public function destroy(int $id): Response
     {
-        //
+        $model = Example::query()->findOrFail($id);
+        $model->delete();
+
+        return response(null, HttpResponse::HTTP_ACCEPTED);
     }
 }
